--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "php": ">=5.3.9",
-    "ext-swoole":"*"
+    "ext-swoole":"*",
+    "phpmailer/phpmailer":"~5.2"
   },
   "autoload": {
     "psr-4": {
